corrected the equation expression in reactions.yaml and remove the reactions from limits.yaml if reactions have been commented out from the reactions.yaml

--- a/sbml/iTZ479_2012_updated/limits.yaml
+++ b/sbml/iTZ479_2012_updated/limits.yaml
@@ -8,10 +8,10 @@
   lower: 0.0
 - reaction: METB1r
   lower: 0.0
-- reaction: NADPDH1
-  lower: 0.0
-- reaction: NAD_H2
-  lower: 0.0
+# - reaction: NADPDH1
+#   lower: 0.0
+# - reaction: NAD_H2
+#   lower: 0.0
 - reaction: SHSL2r
   lower: 0.0
 - reaction: TRPS1r
